--- a/.github/workflows/devsecops-cicd.yml
+++ b/.github/workflows/devsecops-cicd.yml
@@ -1,4 +1,3 @@
-
 name: DevSecOps CI/CD Pipeline
 
 on:
@@ -13,8 +12,6 @@ env:
   IMAGE_NAME: ${{ github.repository_owner }}/node-service
   KUBECONFIG_FILE: ${{ secrets.KUBECONFIG }}
 
-
-
 jobs:
   say-hello:
     name: Say Hello
@@ -22,3 +19,26 @@ jobs:
     steps:
       - name: Hello World Action
         run: echo "Hello, DevSecOps!"
+
+  build-artifact:
+    name: Build Java Artifact
+    runs-on: ubuntu-latest
+    needs: say-hello
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up JDK 8
+      uses: actions/setup-java@v4
+      with:
+        java-version: '8'
+        distribution: 'temurin'
+    
+    - name: Build Artifact
+      run: mvn clean package -DskipTests=true
+    
+    - name: Archive JAR
+      uses: actions/upload-artifact@v4
+      with:
+        name: jar-artifact
+        path: target/*.jar
