--- a/.github/workflows/devsecops-cicd.yml
+++ b/.github/workflows/devsecops-cicd.yml
@@ -128,3 +128,35 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+  # To be included in future iterations
+  # kubernetes-deployment-dev:
+  #   name: Kubernetes Deployment - DEV
+  #   runs-on: ubuntu-latest
+  #   needs: docker-build-push
+  #   if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
+    
+  #   steps:
+  #   - uses: actions/checkout@v4
+    
+  #   - name: Setup kubectl
+  #     uses: azure/setup-kubectl@v3
+  #     with:
+  #       version: 'v1.24.0'
+    
+  #   - name: Configure kubectl
+  #     run: |
+  #       mkdir -p $HOME/.kube
+  #       echo "${{ secrets.KUBECONFIG }}" | base64 -d > $HOME/.kube/config
+  #       chmod 600 $HOME/.kube/config
+    
+  #   - name: Update Kubernetes manifest
+  #     run: |
+  #       sed -i 's#REPLACE_ME#ghcr.io/${{ github.repository }}:latest#g' k8s_deployment_service.yaml
+    
+  #   - name: Deploy to Kubernetes
+  #     run: |
+  #       kubectl apply -f k8s_deployment_service.yaml
+    
+  #   - name: Verify deployment
+  #     run: |
+  #       kubectl rollout status deployment/java-app -n default --timeout=300s
