--- a/.github/workflows/devsecops-cicd.yml
+++ b/.github/workflows/devsecops-cicd.yml
@@ -77,10 +77,34 @@ jobs:
         file: target/site/jacoco/jacoco.xml
         fail_ci_if_error: false
 
+  mutation-tests:
+    name: Mutation Tests - PITest
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up JDK 8
+      uses: actions/setup-java@v4
+      with:
+        java-version: '8'
+        distribution: 'temurin'
+    
+    - name: Run Mutation Tests (PITest)
+      run: mvn org.pitest:pitest-maven:mutationCoverage
+    
+    - name: Upload PITest Reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: pitest-reports
+        path: target/pit-reports/
+
   docker-build-push:
     name: Docker image build and push
     runs-on: ubuntu-latest
-    needs: unit-tests
+    needs: mutation-tests
     permissions:
       contents: read
       packages: write
