--- a/.github/workflows/devsecops-cicd.yml
+++ b/.github/workflows/devsecops-cicd.yml
@@ -104,7 +104,8 @@ jobs:
   docker-build-push:
     name: Docker image build and push
     runs-on: ubuntu-latest
-    needs: mutation-tests
+    needs: [unit-tests, mutation-tests]
+    if: always() && (needs.unit-tests.result == 'success')
     permissions:
       contents: read
       packages: write
