--- a/.github/workflows/devsecops-cicd.yml
+++ b/.github/workflows/devsecops-cicd.yml
@@ -11,6 +11,8 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   KUBECONFIG_FILE: ${{ secrets.KUBECONFIG }}
+  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
 jobs:
   say-hello:
@@ -27,6 +29,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Needed for SonarQube
     
     - name: Set up JDK 8
       uses: actions/setup-java@v4
@@ -50,6 +54,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Needed for SonarQube
     
     - name: Set up JDK 8
       uses: actions/setup-java@v4
@@ -76,11 +82,52 @@ jobs:
       with:
         file: target/site/jacoco/jacoco.xml
         fail_ci_if_error: false
+    
+    - name: Archive test results and coverage
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-coverage-reports
+        path: |
+          target/surefire-reports/
+          target/site/jacoco/
+
+  sonarqube-analysis:
+    name: SonarQube Analysis
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    
+    - name: Set up JDK 8
+      uses: actions/setup-java@v4
+      with:
+        java-version: '8'
+        distribution: 'temurin'
+    
+    - name: Download test coverage reports
+      uses: actions/download-artifact@v4
+      with:
+        name: test-coverage-reports
+        path: target/
+    
+    - name: Run SonarQube Analysis
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
+      run: |
+        mvn sonar:sonar \
+          -Dsonar.projectKey=devsecops_numeric \
+          -Dsonar.host.url=${{ env.SONAR_HOST_URL }} \
+          -Dsonar.token=${{ env.SONAR_TOKEN }} \
+          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
   mutation-tests:
     name: Mutation Tests - PITest
     runs-on: ubuntu-latest
-    needs: unit-tests
+    needs: sonarqube-analysis
     
     steps:
     - uses: actions/checkout@v4
@@ -104,8 +151,8 @@ jobs:
   docker-build-push:
     name: Docker image build and push
     runs-on: ubuntu-latest
-    needs: [unit-tests, mutation-tests]
-    if: always() && (needs.unit-tests.result == 'success')
+    needs: [sonarqube-analysis, mutation-tests]
+    if: always() && (needs.sonarqube-analysis.result == 'success')
     permissions:
       contents: read
       packages: write
