--- a/.github/workflows/devsecops-cicd.yml
+++ b/.github/workflows/devsecops-cicd.yml
@@ -91,38 +91,38 @@ jobs:
           target/surefire-reports/
           target/site/jacoco/
 
-  sonarqube-analysis:
-    name: SonarQube Analysis
-    runs-on: ubuntu-latest
-    needs: unit-tests
+  # sonarqube-analysis:
+  #   name: SonarQube Analysis
+  #   runs-on: ubuntu-latest
+  #   needs: unit-tests
     
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #     with:
+  #       fetch-depth: 0
     
-    - name: Set up JDK 8
-      uses: actions/setup-java@v4
-      with:
-        java-version: '8'
-        distribution: 'temurin'
+  #   - name: Set up JDK 8
+  #     uses: actions/setup-java@v4
+  #     with:
+  #       java-version: '8'
+  #       distribution: 'temurin'
     
-    - name: Download test coverage reports
-      uses: actions/download-artifact@v4
-      with:
-        name: test-coverage-reports
-        path: target/
+  #   - name: Download test coverage reports
+  #     uses: actions/download-artifact@v4
+  #     with:
+  #       name: test-coverage-reports
+  #       path: target/
     
-    - name: Run SonarQube Analysis
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
-      run: |
-        mvn sonar:sonar \
-          -Dsonar.projectKey=devsecops_numeric \
-          -Dsonar.host.url=${{ env.SONAR_HOST_URL }} \
-          -Dsonar.token=${{ env.SONAR_TOKEN }} \
-          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+  #   - name: Run SonarQube Analysis
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
+  #     run: |
+  #       mvn sonar:sonar \
+  #         -Dsonar.projectKey=devsecops_numeric \
+  #         -Dsonar.host.url=${{ env.SONAR_HOST_URL }} \
+  #         -Dsonar.token=${{ env.SONAR_TOKEN }} \
+  #         -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
   mutation-tests:
     name: Mutation Tests - PITest
