--- a/.github/workflows/devsecops-cicd.yml
+++ b/.github/workflows/devsecops-cicd.yml
@@ -127,7 +127,7 @@ jobs:
   mutation-tests:
     name: Mutation Tests - PITest
     runs-on: ubuntu-latest
-    needs: sonarqube-analysis
+    # needs: sonarqube-analysis
     
     steps:
     - uses: actions/checkout@v4
@@ -151,7 +151,7 @@ jobs:
   docker-build-push:
     name: Docker image build and push
     runs-on: ubuntu-latest
-    needs: [sonarqube-analysis, mutation-tests]
+    # needs: [sonarqube-analysis, mutation-tests]
     if: always() && (needs.sonarqube-analysis.result == 'success')
     permissions:
       contents: read
