--- a/.github/workflows/devsecops-cicd.yml
+++ b/.github/workflows/devsecops-cicd.yml
@@ -207,6 +207,33 @@ jobs:
         path: opa-policies/
         retention-days: 30
 
+  kubesec-scan:
+    name: Kubesec Security Scan
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Run Kubesec Scan
+      run: |
+        if [ -f "kubesec-scan.sh" ]; then
+          bash kubesec-scan.sh
+        else
+          echo "kubesec-scan.sh not found, skipping Kubesec scan"
+          exit 1
+        fi
+    
+    - name: Upload Kubesec scan results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: kubesec-scan-results
+        path: |
+          kubesec-*.json
+          kubesec-*.txt
+        retention-days: 30
+
   mutation-tests:
     name: Mutation Tests - PITest
     runs-on: ubuntu-latest
@@ -234,8 +261,8 @@ jobs:
   docker-build-push:
     name: Docker image build and push
     runs-on: ubuntu-latest
-    needs: [opa-conftest, mutation-tests]
-    if: always() && (needs.opa-conftest.result == 'success')
+    needs: [opa-conftest, kubesec-scan, mutation-tests]
+    if: always() && (needs.opa-conftest.result == 'success' && needs.kubesec-scan.result == 'success')
     permissions:
       contents: read
       packages: write
