--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -9,15 +9,28 @@ spec:
   selector:
     matchLabels:
       app: devsecops
-  strategy: {}
   template:
     metadata:
       labels:
         app: devsecops
     spec:
       containers:
-      - image: replace
-        name: devsecops-container
+      - name: devsecops-container
+        image: nginx:1.25  
+        ports:
+        - containerPort: 8080
+        resources:          #  resource limits
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "500m"
+            memory: "256Mi"
+        securityContext:    #  security best practices
+          runAsNonRoot: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
 ---
 apiVersion: v1
 kind: Service
@@ -26,10 +39,10 @@ metadata:
     app: devsecops
   name: devsecops-svc
 spec:
+  selector:
+    app: devsecops
   ports:
   - port: 8080
     protocol: TCP
     targetPort: 8080
-  selector:
-    app: devsecops
   type: NodePort
